# darktone

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: windows-exe.yml
fixtures/playback-smoke/: README.md
public/: audio-worklet.js
scripts/: verify-worklet-build.mjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  playback.rs
src/components/: AlbumGrid.tsx  AlbumPanel.tsx  EmptyState.tsx  LibraryStage.tsx  MainPanelZeroState.tsx  NowPlayingPanel.tsx  QueuePanel.tsx  Sidebar.test.tsx  Sidebar.tsx  SpectrumPanel.tsx  SyncStatusCard.tsx  TrackTable.tsx  TransportBar.test.tsx  TransportBar.tsx  VirtualList.test.tsx  VirtualList.tsx
src/hooks/: usePlayerApp.test.tsx  usePlayerApp.ts
src/lib/: analyzerPresets.ts  audio-worklet.ts  audio.test.ts  audio.ts  library.test.ts  library.ts  playbackProgress.ts  queue.test.ts  queue.ts  tauri.ts  types.ts
src/smoke/: PlaybackSmokeApp.tsx
src/styles/: app.css
