[package]
name = "darktone-player"
version = "0.1.0"
description = "Cross-platform foobar-inspired music player"
authors = ["Codex"]
edition = "2021"

[lib]
name = "darktone_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "isomp4", "aac", "flac"] }
